# ai-lead-system

./: .env  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  ddd.m  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  solo-ai-agency-blueprint(1).md
alembic/: env.py
alembic/versions/: 010846f01f3e_baseline_existing_schema.py  68faad5cf8bf_add_missing_indexes_and_column.py
app/: main.py  worker.py
app/agents/: qualification_agent.py
app/api/: webhooks.py
app/api/routes/: auth.py  clients.py  conversations.py  dashboard.py  escalations.py  health.py  knowledge.py  leads.py
app/api/schemas/: auth.py
app/core/: auth.py  config.py  dependencies.py  rate_limit.py
app/db/: __init__.py  models.py  models_auth.py  session.py
app/integrations/: calendar_service.py  email_service.py  hubspot_service.py  twilio_service.py  whatsapp_service.py
app/services/: auth_service.py  client_service.py  conversation_service.py  knowledge_service.py  lead_service.py  orchestrator.py
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  webhooks.py
docs/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md
frontend/: Dockerfile  docker-compose.staging.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/alembic/: env.py
frontend/nginx/: nginx.conf
frontend/scripts/: backup.sh  cleanup.py  restore.sh
frontend/src/: App.tsx  main.tsx
scripts/: deploy.sh  init-db.sql  reset_password.py  seed_client.py
(+42 files in other folders)
